--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div id="view" hidden>
         <p id="info"></p>
         <img id="img" src="" alt="" title="I DON'T CARE! I WANT PICTURES OF SPIDERMAN">
-        <ul id="typeList">Types:</ul>
+        <ul id="typeList">
+             <lh>Types:</lh>
+             </ul>
     </div>
     
     <script src="./main.js"></script>
