--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <title>PokeDex</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="/C:\Users\user\Documents\GitHub\PokeDex" type="image/x-icon">
+    <link rel="icon" href="C:\Users\user\Documents\GitHub\PokeDex" type="image/x-icon">
 </head>
 <body>
     <div id="container">
         <div id='control' >
             <input id="input" type="text" autocomplete="off" placeholder="Enter Pokemon Name/ID">
             <button id='searchButton'>search</button>
-            <p id="error" style='visibility: hidden;' ></p>
+            <div></div><p id="error" style='visibility: hidden;' ></p></div>
         </div>
+        <label for="view" id="viewLabel">press on a type to search</label>
         <div id="view" style='visibility: hidden;'>
             <img id="img" src="" alt="NO-IMAGE" title="I DON'T CARE! I WANT PICTURES OF SPIDERMAN">
             <p id="info"></p>
