--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button id='searchButton'>search</button>
             <div></div><p id="error" style='visibility: hidden;' ></p></div>
         </div>
-        <label for="view" id="viewLabel">press on a type to search</label>
+        <label for="view" id="viewLabel"><strong>press on a type to search</strong></label>
         <div id="view" style='visibility: hidden;'>
             <img id="img" src="" alt="NO-IMAGE" title="I DON'T CARE! I WANT PICTURES OF SPIDERMAN">
             <p id="info"></p>
