--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>PokeDex</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="/C:\Users\user\Documents\GitHub\PokeDex" type="image/x-icon">
-    <link rel="icon" href="C:\Users\user\Documents\GitHub\PokeDex" type="image/x-icon">
+    <link rel="shortcut icon" href="C:\Users\indya\Documents\GitHub\PokeDex\favicon.ico" type="image/x-icon">
+    <link rel="icon" href="C:\Users\indya\Documents\GitHub\PokeDex\favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div id="container">
         <div id='control' >
+            <div id='baller'><img id="ball" alt=""></div>
             <input id="input" type="text" autocomplete="off" placeholder="Enter Pokemon Name/ID">
             <button id='searchButton'>search</button>
             <div></div><p id="error" style='visibility: hidden;' ></p></div>
